--- a/examples/local_repositories/local_docker_v1_repository/local_docker_v1_repository.yaml
+++ b/examples/local_repositories/local_docker_v1_repository/local_docker_v1_repository.yaml
@@ -1,9 +1,9 @@
-apiVersion: artifactory.jfrog.crossplane.io/v1alpha1
-kind: LocalDockerV1Repository
+apiVersion: local.artifactory.jfrog.crossplane.io/v1alpha1
+kind: DockerV1Repository
 metadata:
-  name: docker-v1-crossplane-repository
+  name: docker-v1-example-crossplane-local
 spec:
   forProvider: {}
-    # key: docker-v1-crossplane-repository
+    # key: docker-v1-example-crossplane-local
   providerConfigRef:
     name: default
