--- a/examples/local_repositories/local_swift_repository/local_swift_repository.yaml
+++ b/examples/local_repositories/local_swift_repository/local_swift_repository.yaml
@@ -1,9 +1,9 @@
-apiVersion: artifactory.jfrog.crossplane.io/v1alpha1
-kind: LocalSwiftRepository
+apiVersion: local.artifactory.jfrog.crossplane.io/v1alpha1
+kind: SwiftRepository
 metadata:
-  name: swift-crossplane-repository
+  name: swift-example-crossplane-local
 spec:
   forProvider: {}
-    # key: swift-crossplane-repository
+    # key: swift-example-crossplane-local
   providerConfigRef:
     name: default
