--- a/examples/remote_repositories/remote_helm_repository/remote_helm_repository.yaml
+++ b/examples/remote_repositories/remote_helm_repository/remote_helm_repository.yaml
@@ -1,11 +1,10 @@
-apiVersion: artifactory.jfrog.crossplane.io/v1alpha1
-kind: RemoteHelmRepository
+apiVersion: remote.artifactory.jfrog.crossplane.io/v1alpha1
+kind: HelmRepository
 metadata:
-  name: remote-helm-repository-example
+  name: helm-example-crossplane-remote
 spec:
   forProvider:
-    key: "remote-helm-repo"
-    url: "https://helm.example.com"
-    description: "Example Helm remote repository"
+    url: https://helm.example.com
+    description: Example Helm remote repository
   providerConfigRef:
     name: default
