--- a/examples/local_repositories/local_npm_repository/local_npm_repository.yaml
+++ b/examples/local_repositories/local_npm_repository/local_npm_repository.yaml
@@ -1,9 +1,9 @@
-apiVersion: artifactory.jfrog.crossplane.io/v1alpha1
-kind: LocalNpmRepository
+apiVersion: local.artifactory.jfrog.crossplane.io/v1alpha1
+kind: NpmRepository
 metadata:
-  name: npm-crossplane-repository
+  name: npm-example-crossplane-local
 spec:
   forProvider: {}
-    # key: npm-crossplane-repository
+    # key: npm-example-crossplane-local
   providerConfigRef:
     name: default
